--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "tsconfig-paths": "^3.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "17.0.43",
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "17.0.43"
   },
   "private": true
 }
